src/objects/copado_envmgr__EnvironmentOrg__c.object
<CustomObject>
    <description>Organizations created per Environment Definition</description>
    <fields>
        <fullName>copado_envmgr__EnvironmentDefinition__c</fullName>
        <label>Environment Definition</label>
        <referenceTo>copado_envmgr__EnvironmentDefinition__c</referenceTo>
        <relationshipLabel>Environment Orgs</relationshipLabel>
        <relationshipName>Environment_Orgs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>copado_envmgr__Environment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Environment</label>
        <referenceTo>copado__Environment__c</referenceTo>
        <relationshipLabel>Environment Orgs</relationshipLabel>
        <relationshipName>Environment_Orgs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado_envmgr__ExpirationDate__c</fullName>
        <label>ExpirationDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>copado_envmgr__IsExpired__c</fullName>
        <formula>copado_envmgr__ExpirationDate__c &lt;= TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Expired?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado_envmgr__LastJobExecutionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Job Execution Id</label>
        <referenceTo>copado__JobExecution__c</referenceTo>
        <relationshipLabel>Environment Orgs</relationshipLabel>
        <relationshipName>Environment_Orgs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado_envmgr__OrgId__c</fullName>
        <description>Salesforce Org Id, used as an External ID that must match copado__Environment__r.copado__Org_ID__c</description>
        <externalId>true</externalId>
        <inlineHelpText>Salesforce Org Id, used as an External ID that must match copado__Environment__r.copado__Org_ID__c</inlineHelpText>
        <label>OrgId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>copado_envmgr__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Creating</fullName>
                    <default>true</default>
                    <label>Creating</label>
                </value>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>In Use</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Environment Org</label>
    <listViews>
        <fullName>copado_envmgr__All</fullName>
        <columns>NAME</columns>
        <columns>copado_envmgr__Status__c</columns>
        <columns>copado_envmgr__Environment__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>copado_envmgr__ExpirationDate__c</columns>
        <columns>copado_envmgr__EnvironmentDefinition__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Environment Org Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Environment Orgs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>